# clipwell

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  clipwell.slnx
.aylith/: project.md
.github/workflows/: ci.yml  docs.yml  notify-catalog.yml  screenshots.yml
bench/: baseline.json  capture-clip.ps1  capture-native.ps1  capture-shots.ps1  run-bench.ps1
cli/: Clipwell.Cli.csproj  Program.cs
daemon/: ClipboardHub.cs  ClipboardWatcherFactory.cs  Clipwell.Daemon.csproj  HistoryStore.cs  IClipboardWatcher.cs  MetadataStore.cs  NullClipboardWatcher.cs  Program.cs
daemon/Detectors/: DetectorRegistry.cs
docs/: .gitignore  next.config.mjs  package-lock.json  package.json
engineering/: next.config.mjs  package-lock.json  package.json
mcp/: ClipboardTools.cs  Clipwell.Mcp.csproj  DaemonClient.cs  Program.cs
openapi/: clipwell.v1.json
plugins/: README.md
protocol/: ClipItem.cs  ClipboardSettings.cs  StoreRow.cs
scripts/: ci-smoke.ps1  ci-smoke.sh
ui/: App.axaml  App.axaml.cs  ClipRow.cs  Clipwell.Ui.csproj  ClipwellClient.cs  DiagnosticsWindow.axaml  DiagnosticsWindow.axaml.cs  FaviconLoader.cs  MainViewModel.cs  MainWindow.axaml  MainWindow.axaml.cs  PerfLog.cs  Program.cs  SettingsWindow.axaml  SettingsWindow.axaml.cs  app.manifest
webui/: .gitignore  biome.json  index.html  knip.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
webui/src-tauri/: Cargo.toml  tauri.conf.json
webui/src-tauri/capabilities/: default.json
webui/src-tauri/icons/: icon.icns
webui/src-tauri/src/: lib.rs  main.rs
(+77 files in other folders)
