[package]
name = "clipwell-webui"
version = "0.1.0"
edition = "2021"
description = "Clipwell web-view desktop shell"

[lib]
name = "clipwell_webui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
enigo = "0.3"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
